<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.codelibs.fess</groupId>
  <artifactId>fess-crawler-parent</artifactId>
  <version>3.2.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Fess Crawler Project</name>
  <description>Fess Crawler is Crawler Framework.</description>
  <url>https://github.com/codelibs/fess-crawler</url>
  <inceptionYear>2009</inceptionYear>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <organization>
    <name>CodeLibs</name>
    <url>https://www.codelibs.org/</url>
  </organization>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/codelibs/fess-crawler/issues</url>
  </issueManagement>
  <scm>
    <connection>scm:git:git@github.com:codelibs/fess-crawler.git</connection>
    <developerConnection>scm:git:git@github.com:codelibs/fess-crawler.git</developerConnection>
    <url>git@github.com:codelibs/fess-crawler.git</url>
  </scm>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>9</version>
  </parent>
  <modules>
    <module>fess-crawler</module>
    <module>fess-crawler-lasta</module>
    <module>fess-crawler-es</module>
    <module>fess-crawler-webdriver</module>
  </modules>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jta.version>1.2</jta.version>
    <dbflute.version>1.2.0</dbflute.version>
    <lastadi.version>0.8.0</lastadi.version>
    <utflute.version>0.9.1</utflute.version>
    <corelib.version>0.5.0</corelib.version>
    <slf4j.version>1.7.26</slf4j.version>
    <httpcomponents.version>4.5.9</httpcomponents.version>
    <tika.version>1.21</tika.version>
    <poi.version>4.0.1</poi.version>
    <pdfbox.version>2.0.15</pdfbox.version>
    <nekohtml.version>2.0.0-SNAPSHOT</nekohtml.version>
    <elasticsearch.version>7.2.0</elasticsearch.version>
    <elasticsearch.httpclient.version>7.2.0</elasticsearch.httpclient.version>
  </properties>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>11</release>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.0.1</version>
          <executions>
            <execution>
              <id>source-jar</id>
              <phase>package</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          <configuration>
            <useSystemClassLoader>false</useSystemClassLoader>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
          <configuration>
            <updateReleaseInfo>true</updateReleaseInfo>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <encoding>UTF-8</encoding>
            <docencoding>UTF-8</docencoding>
            <charset>UTF-8</charset>
          </configuration>
          <executions>
            <execution>
              <phase>site</phase>
              <goals>
                <goal>javadoc</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <header>https://www.codelibs.org/assets/license/header.txt</header>
            <properties>
              <year>2019</year>
            </properties>
            <includes>
              <include>src/**/*.java</include>
            </includes>
            <encoding>UTF-8</encoding>
            <headerDefinitions>
              <headerDefinition>https://www.codelibs.org/assets/license/header-definition-2.xml</headerDefinition>
            </headerDefinitions>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.0</version>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
              <configuration>
                <artifactSet>
                  <includes>
                    <include>org.dbflute:dbflute-runtime</include>
                  </includes>
                </artifactSet>
                <relocations>
                  <relocation>
                    <pattern>org.dbflute</pattern>
                    <shadedPattern>org.codelibs.fess.crawler.dbflute</shadedPattern>
                  </relocation>
                </relocations>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.dbflute</groupId>
          <artifactId>dbflute-maven-plugin</artifactId>
          <version>1.1.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <repositories>
    <repository>
      <id>codelibs.org</id>
      <name>CodeLibs Repository</name>
      <url>https://maven.codelibs.org/</url>
    </repository>
  </repositories>
</project>
